[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Actors/Sprites/ostrich.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Actors/Sounds/walk.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Actors/Sounds/fly.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Actors/Sounds/attack.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1000, 1000, 1000 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 1000, 1000, 1000 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32.1351, 2.97014 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.9999, 32.8272 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 73.1285, 27.7972 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5.82916, 47.3834 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 41.9163, 8 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
scale = Vector2( 0.8, 0.8 )
collision_layer = 128
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 6 )
animation = "run"
frame = 1
speed_scale = 3.0
__meta__ = {
"_edit_lock_": true
}

[node name="Spear" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 93.1169, -62.3032 )
scale = Vector2( 4, 4 )
collision_layer = 8
collision_mask = 84

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Spear"]
position = Vector2( 67.3838, -52.2042 )
shape = SubResource( 7 )

[node name="Knight" type="Area2D" parent="AnimatedSprite"]
position = Vector2( -64, -32 )
scale = Vector2( 4, 4 )
collision_layer = 32
collision_mask = 16
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Knight"]
self_modulate = Color( 0.52549, 0.137255, 0.537255, 1 )
position = Vector2( -10.9163, -59.78 )
shape = SubResource( 8 )

[node name="Horse" type="Area2D" parent="AnimatedSprite"]
scale = Vector2( 4, 4 )
collision_mask = 64
__meta__ = {
"_edit_lock_": true
}

[node name="HorseCollision" type="CollisionShape2D" parent="AnimatedSprite/Horse"]
position = Vector2( -16, -3.2028 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Horse"]
position = Vector2( 46.8155, -62.8008 )
shape = SubResource( 10 )

[node name="PhysicCollider" type="CollisionShape2D" parent="."]
position = Vector2( -26.9163, 114.276 )
shape = SubResource( 11 )

[node name="JumpTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="AudioWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.47
attenuation = 4.43828

[node name="AudioFly" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="AudioAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
attenuation = 2.37841

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="AnimatedSprite/Spear" to="." method="_on_Spear_area_entered"]
[connection signal="body_entered" from="AnimatedSprite/Spear" to="." method="_on_Spear_body_entered"]
[connection signal="area_entered" from="AnimatedSprite/Knight" to="." method="_on_Knight_area_entered"]
[connection signal="area_entered" from="AnimatedSprite/Horse" to="." method="_on_Horse_area_entered"]
